--- a/INDEX.html
+++ b/INDEX.html
@@ -6,8 +6,7 @@
     <title>Página de Jaled Carauni</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css">
-      
+    <link rel="stylesheet" href="style.css">  
 </head>
   <body>
     <header>
@@ -35,16 +34,16 @@
                         <h1><a class="nav-link" href="#Mis proyectos">Proyectos</a></h1>
                       </li>
                       <li class="nav-item">
-                        <h1><a class="nav_link" href="Generador de Lorem Ipsum.html" target="_blank">Generador de Lorem Ipsum</a></h1>
+                        <h1><a class="nav-link" href="Generador de Lorem Ipsum.html">Generador de Lorem Ipsum</a></h1>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><h1>Contactos</h1></a>
                         <div class="dropdown-menu">
-                          <a class="dropdown-item" target="_blank" href="https://www.facebook.com/profile.php?id=100009420206337"><h2>Facebook</h2></a>
-                          <a class="dropdown-item" target="_blank" href="https://www.youtube.com/channel/UCbmy0yGas9irST0VpfGzyrw"><h2>Youtube</h2></a>
-                          <a class="dropdown-item" target="_blank" href="https://wa.link/olci3c"><h2>Whatsapp</h2></a>
-                          <a class="dropdown-item" target="_blank" href="https://www.instagram.com/jaledcarauni?igsh=OTNwMnRjZHhrdWZu"><h2>Instagram</h2></a>
-                          <a class="dropdown-item" target="_blank" href="www.linkedin.com/in/jaled-carauni-5991b2303"><h2>Linkedin</h2></a>
+                          <a class="dropdown-item" href="https://www.facebook.com/profile.php?id=100009420206337"><h2>Facebook</h2></a>
+                          <a class="dropdown-item" href="https://www.youtube.com/channel/UCbmy0yGas9irST0VpfGzyrw"><h2>Youtube</h2></a>
+                          <a class="dropdown-item" href="https://wa.link/olci3c"><h2>Whatsapp</h2></a>
+                          <a class="dropdown-item" href="https://www.instagram.com/jaledcarauni?igsh=OTNwMnRjZHhrdWZu"><h2>Instagram</h2></a>
+                          <a class="dropdown-item" href="www.linkedin.com/in/jaled-carauni-5991b2303"><h2>Linkedin</h2></a>
                         </div>
                       </li>
                     </ul>
@@ -143,7 +142,6 @@
                         <div class="card-body">
                           <h5 class="card-title">Videojuego Propio</h5>
                           <p class="card-text">La emocionante avetura de una arquera magica que tendrá una serie de obstáculos para llegar a la meta.</p>
-                          <a href="" class="btn btn-primary">Juego en desarrollo</a>
                         </div>
                     </div>
                 </div>      
@@ -173,7 +171,7 @@
                       <div class="card-body">
                          <h5 class="card-title">Juego de Memoria</h5>
                          <p class="card-text">Un juego básico para entretenerse y probar algo distinto</p>
-                         <a href="Juego de memoria.html" target="_blank" class="btn btn-primary">Jugar</a>
+                         <a href="Juego de memoria.html"class="btn btn-primary">Jugar</a>
                       </div>
                   </div>
               </div>
