--- a/INDEX.html
+++ b/INDEX.html
@@ -34,9 +34,6 @@
                       <li class="nav-item">
                         <h1><a class="nav-link" href="#Mis proyectos">Proyectos</a></h1>
                       </li>
-                      <li class="nav-item" >
-                        <h1><a class="nav_link" target="_blank" href="Generador de Lorem Ipsum.html">Generador de Lorem Ipsum</a></h1>
-                      </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><h1>Contactos</h1></a>
                         <div class="dropdown-menu">
@@ -183,7 +180,27 @@
                       <div class="card-body">
                          <h5 class="card-title">Calculadora</h5>
                          <p class="card-text">Creada para realizar cálculos matemáticos y obtener resultados</p>
-                         <a href="Calculadora.html" target="_blank" class="btn btn-primary">robar</a>
+                         <a href="Calculadora.html" target="_blank" class="btn btn-primary">Probar</a>
+                      </div>
+                  </div>
+                </div>
+                  <div class="col-md-4">
+                    <div class="card text-center" style="width: 20rem;">
+                      <img src="Imagenes de uso/lorem-ipsum-generator-custom-placeholder-text.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                         <h5 class="card-title">Generador de Lorem Ipsum</h5>
+                         <p class="card-text">Creado para generar párrafos de Lorem Ipsum</p>
+                         <a href="Generador de Lorem Ipsum.html" target="_blank" class="btn btn-primary">Probar</a>
+                      </div>
+                  </div>
+                </div>
+                  <div class="col-md-4">
+                    <div class="card text-center" style="width: 20rem;">
+                      <img src="Imagenes de uso/etiquetas1.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                         <h5 class="card-title">Etiquetas</h5>
+                         <p class="card-text">Etiquetas de imagenes creadas a partir de prompts</p>
+                         <a href="Etiquetas.html" target="_blank" class="btn btn-primary">Ver</a>
                       </div>
                   </div>
               </div>
